@@ -111,7 +111,6 @@ import java.math.BigDecimal;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.Currency;
 import java.util.HashMap;
@@ -191,6 +190,13 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     private boolean liveCallModification = false;
     private boolean recordingCall = true;
     protected boolean isParserFailed = false;
+    protected boolean playWaitUrlPending = false;
+    Tag conferenceVerb;
+    List<URI> conferenceWaitUris;
+    private boolean playMusicForConference = false;
+    //Used for system apps, such as when WebRTC client is dialing out.
+    //The rcml will be used instead of download the RCML
+    private String rcml;
 
     // Call bridging
     private final ActorRef bridgeManager;
@@ -199,7 +205,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     public VoiceInterpreter(final Configuration configuration, final Sid account, final Sid phone, final String version,
                             final URI url, final String method, final URI fallbackUrl, final String fallbackMethod, final URI statusCallback,
                             final String statusCallbackMethod, final String emailAddress, final ActorRef callManager,
-                            final ActorRef conferenceManager, final ActorRef bridgeManager, final ActorRef sms, final DaoManager storage, final ActorRef monitoring) {
+                            final ActorRef conferenceManager, final ActorRef bridgeManager, final ActorRef sms, final DaoManager storage, final ActorRef monitoring, final String rcml) {
         super();
         final ActorRef source = self();
         downloadingRcml = new State("downloading rcml", new DownloadingRcml(source), null);
@@ -233,6 +239,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         transitions.add(new Transition(acquiringCallInfo, initializingCall));
         transitions.add(new Transition(acquiringCallInfo, downloadingRcml));
         transitions.add(new Transition(acquiringCallInfo, finished));
+        transitions.add(new Transition(acquiringCallInfo, ready));
         transitions.add(new Transition(initializingCall, downloadingRcml));
         transitions.add(new Transition(initializingCall, ready));
         transitions.add(new Transition(initializingCall, finishDialing));
@@ -270,8 +277,12 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         transitions.add(new Transition(sendingEmail, ready));
         transitions.add(new Transition(sendingEmail, finished));
         transitions.add(new Transition(sendingEmail, finishDialing));
+        transitions.add(new Transition(checkingCache, caching));
         transitions.add(new Transition(caching, finished));
+        transitions.add(new Transition(caching, conferencing));
+        transitions.add(new Transition(caching, finishConferencing));
         transitions.add(new Transition(playing, ready));
+        transitions.add(new Transition(playing, finishConferencing));
         transitions.add(new Transition(playing, finished));
         transitions.add(new Transition(synthesizing, finished));
         transitions.add(new Transition(redirecting, ready));
@@ -311,6 +322,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         transitions.add(new Transition(forking, finishDialing));
         transitions.add(new Transition(forking, hangingUp));
         transitions.add(new Transition(forking, finished));
+        transitions.add(new Transition(forking, ready));
         // transitions.add(new Transition(acquiringOutboundCallInfo, joiningCalls));
         transitions.add(new Transition(acquiringOutboundCallInfo, hangingUp));
         transitions.add(new Transition(acquiringOutboundCallInfo, finished));
@@ -351,6 +363,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         transitions.add(new Transition(conferencing, finishConferencing));
         transitions.add(new Transition(conferencing, hangingUp));
         transitions.add(new Transition(conferencing, finished));
+        transitions.add(new Transition(conferencing, checkingCache));
+        transitions.add(new Transition(conferencing, caching));
+        transitions.add(new Transition(conferencing, playing));
         transitions.add(new Transition(finishConferencing, ready));
         transitions.add(new Transition(finishConferencing, faxing));
         transitions.add(new Transition(finishConferencing, sendingEmail));
@@ -408,9 +423,11 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             logger.error("URISyntaxException while trying to resolve Cache URI: " + e);
         }
         uri = uri + accountId.toString();
+        playMusicForConference = Boolean.parseBoolean(runtime.getString("play-music-for-conference","false"));
         this.cache = cache(path, uri);
         this.downloader = downloader();
         this.monitoring = monitoring;
+        this.rcml = rcml;
     }
 
     private boolean is(State state) {
@@ -541,7 +558,15 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
                 final String direction = callInfo.direction();
                 if ("inbound".equals(direction)) {
-                    fsm.transition(message, downloadingRcml);
+                    if (rcml!=null && !rcml.isEmpty()) {
+                        if (logger.isInfoEnabled()) {
+                            logger.info("System app is present will proceed to ready state, system app: "+rcml);
+                        }
+                        createInitialCallRecord((CallResponse<CallInfo>) message);
+                        fsm.transition(message, ready);
+                    } else {
+                        fsm.transition(message, downloadingRcml);
+                    }
                 } else {
                     fsm.transition(message, initializingCall);
                 }
@@ -553,7 +578,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         } else if (CallStateChanged.class.equals(klass)) {
             final CallStateChanged event = (CallStateChanged) message;
             callState = event.state();
-            logger.info("VoiceInterpreter received CallStateChanged event: "+callState);
+            if(logger.isInfoEnabled()){
+                logger.info("VoiceInterpreter received CallStateChanged event: "+callState);
+            }
             if (CallStateChanged.State.RINGING == event.state()) {
                 if (forking.equals(state)) {
                     outboundCall = sender;
@@ -592,7 +619,12 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 } else
                     // changed for https://bitbucket.org/telestax/telscale-restcomm/issue/132/ so that we can do Dial SIP Screening
                     if (forking.equals(state) && ((dialBranches != null && dialBranches.contains(sender)) || outboundCall == null)) {
-                        fsm.transition(message, finishDialing);
+                        if (!sender.equals(call)) {
+                            removeDialBranch(message, sender);
+                            return;
+                        } else {
+                            fsm.transition(message, finishDialing);
+                        }
                     } else if (creatingRecording.equals(state)) {
                         // Ask callMediaGroup to stop recording so we have the recording file available
                         // Issue #197: https://telestax.atlassian.net/browse/RESTCOMM-197
@@ -620,9 +652,13 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                             attribute = verb.attribute("action");
                         }
                         //Busy was sent by one of the branches, remove the branch, execute dial action and continue
-                        logger.info("call state changed. New call state: " + ((CallStateChanged) message).state() + "Sender in the dialBranches: " + dialBranches.contains(sender));
+                        if(logger.isInfoEnabled()){
+                            logger.info("call state changed. New call state: " + ((CallStateChanged) message).state() + "Sender in the dialBranches: " + dialBranches.contains(sender));
+                        }
                         ActorRef branch = dialBranches.remove(dialBranches.indexOf(sender));
-                        logger.info("Will cancel branch: " + branch.toString());
+                        if(logger.isInfoEnabled()) {
+                            logger.info("Will cancel branch: " + branch.toString());
+                        }
                         branch.tell(new Cancel(), self());
                         if (dialBranches.size() > 0) {
                             return;
@@ -684,6 +720,12 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                     conferenceState = event.state();
                     conferenceStateModeratorPresent(message);
                     break;
+                case COMPLETED:
+                    conferenceState = event.state();
+                    // At this point i think we should call finishConferencing,
+                    // who will tell conference center to destroy the conference.
+                    fsm.transition(message, finishConferencing);
+                    break;
                 default:
                     break;
             }
@@ -696,11 +738,36 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             final DownloaderResponse response = (DownloaderResponse) message;
             if (logger.isDebugEnabled()) {
                 logger.debug("Rcml URI : " + response.get().getURI() + "response succeeded " + response.succeeded()
-                        + ", statusCode " + response.get().getStatusCode());
+                    + ", statusCode " + response.get().getStatusCode());
             }
             if (response.succeeded() && HttpStatus.SC_OK == response.get().getStatusCode()) {
+                if (conferencing.equals(state)) {
+                    //This is the downloader response for Conferencing waitUrl
+                    if (parser != null) {
+                        getContext().stop(parser);
+                        parser = null;
+                    }
+                    final String type = response.get().getContentType();
+                    if (type != null) {
+                        if (type.contains("text/xml") || type.contains("application/xml") || type.contains("text/html")) {
+                            parser = parser(response.get().getContentAsString());
+                        } else if (type.contains("audio/wav") || type.contains("audio/wave") || type.contains("audio/x-wav")) {
+                            parser = parser("<Play>" + request.getUri() + "</Play>");
+                        } else if (type.contains("text/plain")) {
+                            parser = parser("<Say>" + response.get().getContentAsString() + "</Say>");
+                        }
+                    } else {
+                        //If the waitUrl is invalid then move to notFound
+                        fsm.transition(message, hangingUp);
+                    }
+                    final GetNextVerb next = GetNextVerb.instance();
+                    parser.tell(next, self());
+                    return;
+                }
                 if (dialBranches == null || dialBranches.size()==0) {
-                    logger.info("Downloader response is success, moving to Ready state");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Downloader response is success, moving to Ready state");
+                    }
                     fsm.transition(message, ready);
                 } else {
                     return;
@@ -716,6 +783,16 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         } else if (DiskCacheResponse.class.equals(klass)) {
             final DiskCacheResponse response = (DiskCacheResponse) message;
             if (response.succeeded()) {
+                //Because of RMS issue https://github.com/RestComm/mediaserver/issues/158 we cannot have List<URI> for waitUrl
+                if (playWaitUrlPending) {
+                    if (conferenceWaitUris == null)
+                        conferenceWaitUris = new ArrayList<URI>();
+                    URI waitUrl = response.get();
+                    conferenceWaitUris.add(waitUrl);
+                    final GetNextVerb next = GetNextVerb.instance();
+                    parser.tell(next, self());
+                    return;
+                }
                 if (caching.equals(state) || checkingCache.equals(state)) {
                     if (play.equals(verb.name()) || say.equals(verb.name())) {
                         fsm.transition(message, playing);
@@ -738,12 +815,27 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 }
             }
         } else if (ParserFailed.class.equals(klass)) {
-          logger.info("ParserFailed received. Will stop the call");
+            if(logger.isInfoEnabled()) {
+                logger.info("ParserFailed received. Will stop the call");
+            }
             isParserFailed = true;
             fsm.transition(message, hangingUp);
         } else if (Tag.class.equals(klass)) {
-            // final Tag verb = (Tag) message;
             verb = (Tag) message;
+            if (playWaitUrlPending) {
+                if (!(play.equals(verb.name()) || say.equals(verb.name()))) {
+                    if (logger.isInfoEnabled()) {
+                        logger.info("Tag for waitUrl is neither Play or Say");
+                    }
+                    fsm.transition(message, hangingUp);
+                }
+                if (say.equals(verb.name())) {
+                    fsm.transition(message, checkingCache);
+                } else if (play.equals(verb.name())) {
+                    fsm.transition(message, caching);
+                }
+                return;
+            }
             if (CallStateChanged.State.RINGING == callState) {
                 if (reject.equals(verb.name())) {
                     fsm.transition(message, rejecting);
@@ -781,14 +873,23 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 invalidVerb(verb);
             }
         } else if (End.class.equals(klass)) {
+//            Because of RMS issue https://github.com/RestComm/mediaserver/issues/158 we cannot have List<URI> for waitUrl
+            if (playWaitUrlPending && conferenceWaitUris != null && conferenceWaitUris.size() > 0) {
+                fsm.transition(conferenceWaitUris, conferencing);
+                return;
+            }
             if (callState.equals(CallStateChanged.State.COMPLETED)) {
                 fsm.transition(message, finished);
             } else {
                 if (!isParserFailed) {
-                    logger.info("End tag received will move to hangup the call");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("End tag received will move to hangup the call");
+                    }
                     fsm.transition(message, hangingUp);
                 } else {
-                    logger.info("End tag received but parser failed earlier so hangup would have been already sent to the call");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("End tag received but parser failed earlier so hangup would have been already sent to the call");
+                    }
                 }
 
             }
@@ -796,7 +897,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             fsm.transition(message, gathering);
         } else if (MediaGroupResponse.class.equals(klass)) {
             final MediaGroupResponse<String> response = (MediaGroupResponse<String>) message;
-            logger.info("MediaGroupResponse, succeeded: " + response.succeeded() + "  " + response.cause());
+            if(logger.isInfoEnabled()) {
+                logger.info("MediaGroupResponse, succeeded: " + response.succeeded() + "  " + response.cause());
+            }
             if (response.succeeded()) {
                 if (playingRejectionPrompt.equals(state)) {
                     fsm.transition(message, hangingUp);
@@ -901,7 +1004,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             attribute = verb.attribute("action");
         }
         if (dialBranches != null && dialBranches.contains(sender)) {
-            logger.info("Dial branch new call state: " + ((CallStateChanged) message).state().toString() + " call path: " + sender().path() + " VI state: " + fsm.state());
+            if(logger.isInfoEnabled()) {
+                logger.info("Dial branch new call state: " + ((CallStateChanged) message).state().toString() + " call path: " + sender().path() + " VI state: " + fsm.state());
+            }
             dialBranches.remove(sender);
 //            if (attribute != null) {
 //                executeDialAction(message, sender);
@@ -973,11 +1078,15 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     }
 
     private void conferenceStateModeratorPresent(final Object message) {
-        logger.info("VoiceInterpreter#conferenceStateModeratorPresent will unmute the call: " + call.path().toString());
+        if(logger.isInfoEnabled()) {
+            logger.info("VoiceInterpreter#conferenceStateModeratorPresent will unmute the call: " + call.path().toString());
+        }
         call.tell(new Unmute(), self());
 
         if (confSubVoiceInterpreter != null) {
+        if(logger.isInfoEnabled()) {
             logger.info("VoiceInterpreter stopping confSubVoiceInterpreter");
+        }
 
             // Stop the conference back ground music
             final StopInterpreter stop = new StopInterpreter();
@@ -1008,6 +1117,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         parameters.add(new BasicNameValuePair("CallerName", callerName));
         final String forwardedFrom = (callInfo.forwardedFrom() == null || callInfo.forwardedFrom().isEmpty()) ? "null" : callInfo.forwardedFrom();
         parameters.add(new BasicNameValuePair("ForwardedFrom", forwardedFrom));
+        parameters.add(new BasicNameValuePair("CallTimestamp", callInfo.dateCreated().toString()));
         // logger.info("Type " + callInfo.type());
         SipServletResponse lastResponse = callInfo.lastResponse();
         if (CreateCall.Type.SIP == callInfo.type()) {
@@ -1049,7 +1159,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         while (headerNames.hasNext()) {
             String headerName = headerNames.next();
             if (headerName.startsWith("X-")) {
-                logger.debug("%%%%%%%%%%% Indetified customer header: " + headerName);
+                if(logger.isDebugEnabled()) {
+                    logger.debug("%%%%%%%%%%% Indetified customer header: " + headerName);
+                }
                 parameters.add(new BasicNameValuePair(prefix + headerName, sipMessage.getHeader(headerName)));
             }
         }
@@ -1127,68 +1239,72 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         @Override
         public void execute(final Object message) throws Exception {
             final Class<?> klass = message.getClass();
-            final CallDetailRecordsDao records = storage.getCallDetailRecordsDao();
             if (CallResponse.class.equals(klass)) {
-                final CallResponse<CallInfo> response = (CallResponse<CallInfo>) message;
-                callInfo = response.get();
-                callState = callInfo.state();
-                if (callInfo.direction().equals("inbound")) {
-                    callRecord = records.getCallDetailRecord(callInfo.sid());
-                    if (callRecord == null) {
-                        // Create a call detail record for the call.
-                        final CallDetailRecord.Builder builder = CallDetailRecord.builder();
-                        builder.setSid(callInfo.sid());
-                        builder.setInstanceId(RestcommConfiguration.getInstance().getMain().getInstanceId());
-                        builder.setDateCreated(callInfo.dateCreated());
-                        builder.setAccountSid(accountId);
-                        builder.setTo(callInfo.to());
-                        if (callInfo.fromName() != null) {
-                            builder.setCallerName(callInfo.fromName());
-                        } else {
-                            builder.setCallerName("Unknown");
-                        }
-                        if (callInfo.from() != null) {
-                            builder.setFrom(callInfo.from());
-                        } else {
-                            builder.setFrom("Unknown");
-                        }
-                        builder.setForwardedFrom(callInfo.forwardedFrom());
-                        builder.setPhoneNumberSid(phoneId);
-                        builder.setStatus(callState.toString());
-                        final DateTime now = DateTime.now();
-                        builder.setStartTime(now);
-                        builder.setDirection(callInfo.direction());
-                        builder.setApiVersion(version);
-                        builder.setPrice(new BigDecimal("0.00"));
-                        // TODO implement currency property to be read from Configuration
-                        builder.setPriceUnit(Currency.getInstance("USD"));
-                        final StringBuilder buffer = new StringBuilder();
-                        buffer.append("/").append(version).append("/Accounts/");
-                        buffer.append(accountId.toString()).append("/Calls/");
-                        buffer.append(callInfo.sid().toString());
-                        final URI uri = URI.create(buffer.toString());
-                        builder.setUri(uri);
-
-                        builder.setCallPath(call.path().toString());
-
-                        callRecord = builder.build();
-                        records.addCallDetailRecord(callRecord);
-                        //
-                        // if (liveCallModification) {
-                        // logger.info("There is no CallRecord for this call but this is a LiveCallModificatin request. Will acquire call media group");
-                        // fsm.transition(message, acquiringCallMediaGroup);
-                        // return;
-                        // }
-                    }
-
-                    // Update the application.
-                    callback();
-                }
+                createInitialCallRecord((CallResponse<CallInfo>) message);
             }
             // Ask the downloader to get us the application that will be executed.
             final List<NameValuePair> parameters = parameters();
             request = new HttpRequestDescriptor(url, method, parameters);
             downloader.tell(request, source);
+        }
+    }
+
+    private void createInitialCallRecord(CallResponse<CallInfo> message) {
+        final CallDetailRecordsDao records = storage.getCallDetailRecordsDao();
+        final CallResponse<CallInfo> response = message;
+        callInfo = response.get();
+        callState = callInfo.state();
+        if (callInfo.direction().equals("inbound")) {
+            callRecord = records.getCallDetailRecord(callInfo.sid());
+            if (callRecord == null) {
+                // Create a call detail record for the call.
+                final CallDetailRecord.Builder builder = CallDetailRecord.builder();
+                builder.setSid(callInfo.sid());
+                builder.setInstanceId(RestcommConfiguration.getInstance().getMain().getInstanceId());
+                builder.setDateCreated(callInfo.dateCreated());
+                builder.setAccountSid(accountId);
+                builder.setTo(callInfo.to());
+                if (callInfo.fromName() != null) {
+                    builder.setCallerName(callInfo.fromName());
+                } else {
+                    builder.setCallerName("Unknown");
+                }
+                if (callInfo.from() != null) {
+                    builder.setFrom(callInfo.from());
+                } else {
+                    builder.setFrom("Unknown");
+                }
+                builder.setForwardedFrom(callInfo.forwardedFrom());
+                builder.setPhoneNumberSid(phoneId);
+                builder.setStatus(callState.toString());
+                final DateTime now = DateTime.now();
+                builder.setStartTime(now);
+                builder.setDirection(callInfo.direction());
+                builder.setApiVersion(version);
+                builder.setPrice(new BigDecimal("0.00"));
+                // TODO implement currency property to be read from Configuration
+                builder.setPriceUnit(Currency.getInstance("USD"));
+                final StringBuilder buffer = new StringBuilder();
+                buffer.append("/").append(version).append("/Accounts/");
+                buffer.append(accountId.toString()).append("/Calls/");
+                buffer.append(callInfo.sid().toString());
+                final URI uri = URI.create(buffer.toString());
+                builder.setUri(uri);
+
+                builder.setCallPath(call.path().toString());
+
+                callRecord = builder.build();
+                records.addCallDetailRecord(callRecord);
+                //
+                // if (liveCallModification) {
+                // logger.info("There is no CallRecord for this call but this is a LiveCallModificatin request. Will acquire call media group");
+                // fsm.transition(message, acquiringCallMediaGroup);
+                // return;
+                // }
+            }
+
+            // Update the application.
+            callback();
         }
     }
 
@@ -1278,6 +1394,12 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                     source.tell(stop, source);
                     return;
                 }
+            } else if ((message instanceof CallResponse) && (rcml != null && !rcml.isEmpty())) {
+                if (parser != null) {
+                    context.stop(parser);
+                    parser = null;
+                }
+                parser = parser(rcml);
             } else if (pausing.equals(state)) {
                 context.setReceiveTimeout(Duration.Undefined());
             }
@@ -1285,9 +1407,10 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             final GetNextVerb next = GetNextVerb.instance();
             if (parser != null) {
                 parser.tell(next, source);
-            } else {
+            } else if(logger.isInfoEnabled()) {
                 logger.info("Parser is null");
             }
+
         }
     }
 
@@ -1657,7 +1780,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             context.setReceiveTimeout(Duration.create(timeLimit, TimeUnit.SECONDS));
 
             if (dialRecordAttribute != null && "true".equalsIgnoreCase(dialRecordAttribute.value())) {
-                logger.info("Start recording of the bridge");
+                if(logger.isInfoEnabled()) {
+                    logger.info("Start recording of the bridge");
+                }
                 record(bridge);
             }
         }
@@ -1689,7 +1814,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     }
 
     private void recordCall() {
-        logger.info("Start recording of the call");
+        if(logger.isInfoEnabled()) {
+            logger.info("Start recording of the call");
+        }
         record(call);
     }
 
@@ -1701,7 +1828,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     @SuppressWarnings("unchecked")
     private void executeDialAction(final Object message, final ActorRef outboundCall) {
         if (!dialActionExecuted && verb != null && dial.equals(verb.name())) {
-            logger.info("Proceeding to execute Dial Action attribute");
+            if(logger.isInfoEnabled()){
+                logger.info("Proceeding to execute Dial Action attribute");
+            }
             this.dialActionExecuted = true;
             final List<NameValuePair> parameters = parameters();
 
@@ -1709,7 +1838,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
             if (call != null) {
                 try {
-                    logger.info("Trying to get inbound call Info");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Trying to get inbound call Info");
+                    }
                     final Timeout expires = new Timeout(Duration.create(5, TimeUnit.SECONDS));
                     Future<Object> future = (Future<Object>) ask(call, new GetCallInfo(), expires);
                     CallResponse<CallInfo> callResponse = (CallResponse<CallInfo>) Await.result(future,
@@ -1722,7 +1853,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
             if (outboundCall != null) {
                 try {
-                    logger.info("Trying to get outboundCall Info");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Trying to get outboundCall Info");
+                    }
                     final Timeout expires = new Timeout(Duration.create(10, TimeUnit.SECONDS));
                     Future<Object> future = (Future<Object>) ask(outboundCall, new GetCallInfo(), expires);
                     CallResponse<CallInfo> callResponse = (CallResponse<CallInfo>) Await.result(future,
@@ -1816,7 +1949,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
             final NotificationsDao notifications = storage.getNotificationsDao();
             if (attribute != null) {
-                logger.info("Executing Dial Action attribute.");
+                if(logger.isInfoEnabled()) {
+                    logger.info("Executing Dial Action attribute.");
+                }
                 String action = attribute.value();
                 if (action != null && !action.isEmpty()) {
                     URI target = null;
@@ -1848,8 +1983,12 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                             method = "POST";
                         }
                     }
-                    logger.info("Dial Action URL: " + uri.toString() + " Method: " + method);
-                    logger.debug("Dial Action parameters: \n" + parameters);
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Dial Action URL: " + uri.toString() + " Method: " + method);
+                    }
+                    if(logger.isDebugEnabled()) {
+                        logger.debug("Dial Action parameters: \n" + parameters);
+                    }
                     // Redirect to the action url.
                     request = new HttpRequestDescriptor(uri, method, parameters);
                     // Tell the downloader to send the Dial Parameters to the Action url but we don't need a reply back so sender ==
@@ -1859,7 +1998,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 }
             }
         } else if (verb == null) {
-            logger.info("Dial action didn't executed because verb is null");
+            if(logger.isInfoEnabled()) {
+                logger.info("Dial action didn't executed because verb is null");
+            }
         }
     }
 
@@ -1871,14 +2012,18 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         @Override
         public void execute(final Object message) throws Exception {
             final State state = fsm.state();
-            logger.info("FinishDialing, current state: " + state);
+            if(logger.isInfoEnabled()) {
+                logger.info("FinishDialing, current state: " + state);
+            }
             Attribute attribute = null;
             if (verb != null) {
                 attribute = verb.attribute("action");
             }
 
             if (message instanceof ReceiveTimeout && dialBranches != null) {
-                logger.info("Received timeout, will cancel branches, current VoiceIntepreter state: " + state);
+                if(logger.isInfoEnabled()) {
+                    logger.info("Received timeout, will cancel branches, current VoiceIntepreter state: " + state);
+                }
                 //The forking timeout reached, we have to cancel all dial branches
                 final UntypedActorContext context = getContext();
                 context.setReceiveTimeout(Duration.Undefined());
@@ -1891,7 +2036,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     //                        executeDialAction(message, branch);
     //                    }
                         branch.tell(new Cancel(), source);
-                        logger.info("Canceled branch: " + branch.path());
+                        if(logger.isInfoEnabled()) {
+                            logger.info("Canceled branch: " + branch.path());
+                        }
                     }
                 }
                 if (dialBranches != null && dialBranches.size() > 0) {
@@ -1899,7 +2046,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 }
 //                    call.tell(new StopMediaGroup(), null);
                 if (attribute == null) {
-                    logger.info("Will ask for the next verb from parser");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Will ask for the next verb from parser");
+                }
                     final GetNextVerb next = GetNextVerb.instance();
                     parser.tell(next, source);
                 } else {
@@ -1916,11 +2065,15 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             }
 
             if (message instanceof CallStateChanged) {
-                logger.info("CallStateChanged state: "+((CallStateChanged)message).state().toString()+" ,sender: "+sender().path());
+                if(logger.isInfoEnabled()) {
+                    logger.info("CallStateChanged state: "+((CallStateChanged)message).state().toString()+" ,sender: "+sender().path());
+                }
                 if (forking.equals(state) || finishDialing.equals(state)) {
                     if (sender.equals(call)) {
                         //Initial call wants to finish dialing
-                        logger.info("Sender == call: " + sender.equals(call));
+                        if(logger.isInfoEnabled()) {
+                            logger.info("Sender == call: " + sender.equals(call));
+                        }
                         final UntypedActorContext context = getContext();
                         context.setReceiveTimeout(Duration.Undefined());
 
@@ -1961,7 +2114,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                         return;
                     }
                 } else if (bridged.equals(state)) {
-                    logger.info("finishDialing state=bridged, will hangup outboundCall");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("finishDialing state=bridged, will hangup outboundCall");
+                    }
                     outboundCall.tell(new Hangup(), source);
                 } else {
 //                    logger.debug("FinishDialing, State: " + state);
@@ -1991,16 +2146,20 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             }
 
             if (attribute != null) {
-                logger.info("Executing Dial Action url");
+                if(logger.isInfoEnabled()) {
+                    logger.info("Executing Dial Action url");
+                }
                 if (outboundCall != null) {
                     executeDialAction(message, outboundCall);
                 } else {
-                    logger.info("Executing Dial Action url");
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Executing Dial Action url");
+                    }
                     executeDialAction(message, null);
                 }
                 callback();
                 return;
-            } else {
+            } else if(logger.isInfoEnabled()) {
                 logger.info("Action attribute is null.");
             }
 
@@ -2109,8 +2268,15 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
         @Override
         public void execute(final Object message) throws Exception {
+            if (message instanceof List<?>) {
+                List<URI> waitUrls = (List<URI>) message;
+                playWaitUrl(waitUrls, self());
+                playWaitUrlPending = false;
+                return;
+            }
             final NotificationsDao notifications = storage.getNotificationsDao();
             final Tag child = conference(verb);
+            conferenceVerb = verb;
 
             // Mute
             Attribute attribute = child.attribute("muted");
@@ -2135,23 +2301,37 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                 }
             }
 
+            if (logger.isInfoEnabled()) {
+                logger.info("At conferencing, state: "+fsm.state()+" , playMusicForConference: "+playMusicForConference+" conferenceInfo.participants().size(): "+conferenceInfo.participants().size());
+            }
+            if (playMusicForConference && startConferenceOnEnter) {
+                //playMusicForConference is true, take over control of startConferenceOnEnter
+                if (conferenceInfo.participants().size() == 1) {
+                    startConferenceOnEnter = false;
+                } else  if (conferenceInfo.participants().size() > 1) {
+                    startConferenceOnEnter = true;
+                }
+            }
+
             if (!startConferenceOnEnter && conferenceState == ConferenceStateChanged.State.RUNNING_MODERATOR_ABSENT) {
                 if (!muteCall) {
                     final Mute mute = new Mute();
-                    logger.info("Muting the call as startConferenceOnEnter =" + startConferenceOnEnter + " callMuted = "
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Muting the call as startConferenceOnEnter =" + startConferenceOnEnter + " , callMuted = "
                             + muteCall);
+                    }
                     call.tell(mute, source);
                 }
 
                 // Only play background music if conference is not doing that already
                 // If conference state is RUNNING_MODERATOR_ABSENT and participants > 0 then BG music is playing already
-                logger.info("Play background music? " + conferenceInfo.participants().size());
+                if(logger.isInfoEnabled()) {
+                    logger.info("Play background music? " + (conferenceInfo.participants().size() == 1));
+                }
                 boolean playBackground = conferenceInfo.participants().size() == 1;
                 if (playBackground) {
                     // Parse wait url.
-                    URI waitUrl = new URL(
-                            "http://127.0.0.1:8080/restcomm/music/rock/nickleus_-_original_guitar_song_200907251723.wav")
-                            .toURI();
+                    URI waitUrl = new URI("/restcomm/music/electronica/teru_-_110_Downtempo_Electronic_4.wav");
                     attribute = child.attribute("waitUrl");
                     if (attribute != null) {
                         String value = attribute.value();
@@ -2190,9 +2370,20 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                         }
                     }
 
+                    if (!waitUrl.getPath().toLowerCase().endsWith("wav")) {
+                        if (logger.isInfoEnabled()) {
+                            logger.info("WaitUrl for Conference will use RCML from URI: "+waitUrl.toString());
+                        }
+                        final List<NameValuePair> parameters = parameters();
+                        request = new HttpRequestDescriptor(waitUrl, method, parameters);
+                        downloader.tell(request, self());
+                        playWaitUrlPending = true;
+                        return;
+                    }
+
                     // Tell conference to play music to participants on hold
-                    if (waitUrl != null) {
-                        conference.tell(new Play(waitUrl, Short.MAX_VALUE), super.source);
+                    if (waitUrl != null && !playWaitUrlPending) {
+                        playWaitUrl(waitUrl, super.source);
                     }
                 }
             } else if (conferenceState == ConferenceStateChanged.State.RUNNING_MODERATOR_ABSENT) {
@@ -2215,6 +2406,15 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
         }
     }
 
+    //Because of RMS issue https://github.com/RestComm/mediaserver/issues/158 we cannot have List<URI> for waitUrl
+    protected void playWaitUrl(final List<URI> waitUrls, final ActorRef source) {
+        conference.tell(new Play(waitUrls, Short.MAX_VALUE), source);
+    }
+
+    protected void playWaitUrl(final URI waitUrl, final ActorRef source) {
+        conference.tell(new Play(waitUrl, Short.MAX_VALUE), source);
+    }
+
     private final class FinishConferencing extends AbstractDialAction {
         public FinishConferencing(final ActorRef source) {
             super(source);
@@ -2230,7 +2430,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             }
 
             // Clean up
-            if (ConferenceStateChanged.class.equals(message)) {
+            if (message instanceof ConferenceStateChanged) {
                 // Destroy conference if state changed to completed (last participant in call)
                 ConferenceStateChanged confStateChanged = (ConferenceStateChanged) message;
                 if (ConferenceStateChanged.State.COMPLETED.equals(confStateChanged.state())) {
@@ -2244,7 +2444,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             final NotificationsDao notifications = storage.getNotificationsDao();
 
             // Parse "action".
-            Attribute attribute = verb.attribute("action");
+            Attribute attribute = conferenceVerb.attribute("action");
             if (attribute != null) {
                 String action = attribute.value();
                 if (action != null && !action.isEmpty()) {
@@ -2264,7 +2464,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                     final URI uri = UriUtils.resolve(base, target);
                     // Parse "method".
                     String method = "POST";
-                    attribute = verb.attribute("method");
+                    attribute = conferenceVerb.attribute("method");
                     if (attribute != null) {
                         method = attribute.value();
                         if (method != null && !method.isEmpty()) {
@@ -2299,7 +2499,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
         @Override
         public void execute(final Object message) throws Exception {
-            logger.info("At Finished state, state: " + fsm.state());
+            if(logger.isInfoEnabled()) {
+                logger.info("At Finished state, state: " + fsm.state());
+            }
             final Class<?> klass = message.getClass();
             if (CallStateChanged.class.equals(klass)) {
                 final CallStateChanged event = (CallStateChanged) message;
@@ -2337,7 +2539,7 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
             if (conference != null) {
                 // Parse "endConferenceOnExit"
                 boolean endOnExit = false;
-                final Tag child = conference(verb);
+                final Tag child = conference(conferenceVerb);
                 Attribute attribute = child.attribute("endConferenceOnExit");
 
                 if (attribute != null) {
@@ -2416,17 +2618,23 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
     @Override
     public void postStop() {
         if (!fsm.state().equals(uninitialized)) {
-            logger.info("VoiceIntepreter: " + self().path()
+            if(logger.isInfoEnabled()) {
+                logger.info("VoiceIntepreter: " + self().path()
                     + "At the postStop() method. Will clean up Voice Interpreter. Keep calls: " + liveCallModification);
+            }
             if (fsm.state().equals(bridged) && outboundCall != null && !liveCallModification) {
-                logger.info("At postStop(), will clean up outbound call");
+                if(logger.isInfoEnabled()) {
+                    logger.info("At postStop(), will clean up outbound call");
+                }
                 outboundCall.tell(new Hangup(), null);
                 callManager.tell(new DestroyCall(outboundCall), null);
                 outboundCall = null;
             }
 
             if (call != null && !liveCallModification) {
-                logger.info("At postStop(), will clean up call");
+                if(logger.isInfoEnabled()) {
+                    logger.info("At postStop(), will clean up call");
+                }
                 callManager.tell(new DestroyCall(call), null);
                 call = null;
             }
@@ -2506,9 +2714,10 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
 
         @Override
         public void execute(Object message) throws Exception {
-            logger.info("Joining call from:" + callInfo.from() + " to: " + callInfo.to() + " with outboundCall from: "
+            if(logger.isInfoEnabled()) {
+                logger.info("Joining call from:" + callInfo.from() + " to: " + callInfo.to() + " with outboundCall from: "
                     + outboundCallInfo.from() + " to: " + outboundCallInfo.to());
-
+            }
             // Check for any Dial verbs with url attributes (call screening url)
             Tag child = dialChildrenWithAttributes.get(outboundCall);
             if (child != null && child.attribute("url") != null) {
@@ -2524,7 +2733,9 @@ public final class VoiceInterpreter extends BaseVoiceInterpreter {
                         return;
                     }
                 } catch (Exception e) {
-                    logger.info("Exception while trying to execute call screening: "+e);
+                    if(logger.isInfoEnabled()) {
+                        logger.info("Exception while trying to execute call screening: "+e);
+                    }
                     fsm.transition(message, hangingUp);
                     return;
                 }
